# experimental-blok

./: .gitignore  Blok.sln  Blok.vcxproj  Blok.vcxproj.filters  CMakeLists.txt  main.c
common/: macros.h
core/: args.h  program.c  program.h
model/object/: square.h
model/util/: direction.h  position.h  size.h
presentation/: components.h  window.c  window.h
presentation/components/: canvas.h  panel.h
presentation/controls/: button.h  progress-bar.c  progress-bar.h  text.h  toggle-button.c  toggle-button.h
presentation/gfx/: colours.h  renderer.c  renderer.h  tools.c  tools.h
service/: state.c  state.h
src/: main.c
